# control_center

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  address.h  console.h  controller.h  controls.h  entry_point.cpp  entry_point_new.cpp  font_data.h  gui_context.h  input.h  receiving_loop.h  transmission_loop.h  ui.h
src/control_center/: CMakeLists.txt  address.h  control_center.cpp  controller.h  font_data.h  frame_stats.h  gui_context.h  motor_data.h  receiving_loop.h  ringbuffer.h  sensor_data.h  texture_update_data.h  timer_loop.h  transmission_loop.h  transmitter.h  tripplebuffer.h  ui.h
src/test_driver/: CMakeLists.txt  test_driver.cpp
